--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -964,14 +964,14 @@
           }
         }
         { NoParse47 HBox
-          MoveScaled(2,32,44,4)
+          MoveScaled(1,33,44,4)
           ToolTip = ("Enable/Disbale Tooltips")
           Spacing = True
-          { ToolTipsCHKHISTORY CheckBox
-            MoveScaled(0,0,43,4)
-            ToolTip = ("Remember last played files.")
+          { RestorePlayCHK CheckBox
+            MoveScaled(1,0,43,4)
+            ToolTip = ("If you close xt7-player while playing a local file,\nxt7 will start just were you left the next time.")
             Expand = True
-            Text = ("File history")
+            Text = ("Start were you left")
           }
         }
         { NoParse18 HBox
