--- a/.src/Form/LogWindow.form
+++ b/.src/Form/LogWindow.form
@@ -6,6 +6,7 @@
   Icon = Picture["icon:/16/text"]
   Arrangement = Arrange.Vertical
   Spacing = True
+  Margin = True
   Padding = 6
   { HBox3 HBox
     MoveScaled(1,0,67,3.5714)
