--- a/.src/Form/VFiltersCfg.form
+++ b/.src/Form/VFiltersCfg.form
@@ -8,6 +8,7 @@
   Persistent = True
   Arrangement = Arrange.Vertical
   Spacing = True
+  Margin = True
   Padding = 4
   { MenuProfile Menu
     Text = ("Profile")
