--- a/.src/Form/RealtimeForm.form
+++ b/.src/Form/RealtimeForm.form
@@ -7,7 +7,6 @@
   Stacking = Window.Above
   Arrangement = Arrange.Vertical
   AutoResize = True
-  Spacing = True
   Margin = True
   { Label5 Label
     MoveScaled(0,0,61,2)
@@ -17,6 +16,8 @@
   { HBox5 HBox
     MoveScaled(1,3,60,4)
     Spacing = True
+    Margin = True
+    Padding = 2
     { PictureBox5 PictureBox
       MoveScaled(1,1,2.2857,2.2857)
       Picture = Picture["icon:/16/zoom-fit"]
@@ -27,14 +28,17 @@
       AutoResize = True
       Text = ("Zoom")
     }
+    { VBox1 VBox
+      MoveScaled(17,1,2,3)
+      Expand = True
+    }
     { ClearZoomButton ToolButton
-      MoveScaled(17,0,4,4)
+      MoveScaled(18,0,4,4)
       Picture = Picture["icon:/16/clear"]
     }
     { PanscanSlider Slider
-      MoveScaled(22,0,25,3)
+      MoveScaled(24,0,23,3)
       Tag = "panscan"
-      Expand = True
       MinValue = 1000
       MaxValue = 30000
     }
@@ -48,6 +52,8 @@
   { HBox2 HBox
     MoveScaled(1,8,60,4)
     Spacing = True
+    Margin = True
+    Padding = 2
     { PictureBox1 PictureBox
       MoveScaled(0,0,2.2857,2.2857)
       Picture = Picture["speaker_small.png"]
@@ -58,15 +64,18 @@
       AutoResize = True
       Text = ("Audio Delay")
     }
+    { VBox2 VBox
+      MoveScaled(17,1,2,3)
+      Expand = True
+    }
     { ToolButton1 ToolButton Clears
       Name = "ToolButton1"
-      MoveScaled(17,0,4,4)
+      MoveScaled(18,0,4,4)
       Picture = Picture["icon:/16/clear"]
     }
     { AudioDelaySlider Slider
-      MoveScaled(22,0,25,3)
+      MoveScaled(24,0,23,3)
       Tag = "audio_delay"
-      Expand = True
       MinValue = -10000
       MaxValue = 10000
     }
@@ -77,9 +86,14 @@
       Step = 20
     }
   }
+  { Separator2 Separator
+    MoveScaled(9,12,46,2)
+  }
   { HBox1 HBox
-    MoveScaled(1,13,60,4)
+    MoveScaled(1,14,60,4)
     Spacing = True
+    Margin = True
+    Padding = 2
     { PictureBox2 PictureBox
       MoveScaled(0,0,2.2857,2.2857)
       Picture = Picture["icon:/16/font"]
@@ -90,15 +104,18 @@
       AutoResize = True
       Text = ("Subtitle delay")
     }
+    { VBox3 VBox
+      MoveScaled(18,0,2,4)
+      Expand = True
+    }
     { ToolButton2 ToolButton Clears
       Name = "ToolButton2"
-      MoveScaled(17,0,4,4)
+      MoveScaled(18,0,4,4)
       Picture = Picture["icon:/16/clear"]
     }
     { SubDelaySlider Slider
-      MoveScaled(22,0,25,3)
+      MoveScaled(24,0,23,3)
       Tag = "sub_delay"
-      Expand = True
       MinValue = -10000
       MaxValue = 10000
     }
@@ -110,8 +127,10 @@
     }
   }
   { HBox4 HBox
-    MoveScaled(1,18,60,4)
+    MoveScaled(1,19,60,4)
     Spacing = True
+    Margin = True
+    Padding = 2
     { PictureBox4 PictureBox
       MoveScaled(0,0,2.2857,2.2857)
       Picture = Picture["icon:/16/zoom-in"]
@@ -122,14 +141,17 @@
       AutoResize = True
       Text = ("Subtitle scale")
     }
+    { VBox4 VBox
+      MoveScaled(17,0,3,4)
+      Expand = True
+    }
     { ToolButton4 ToolButton
-      MoveScaled(18,0,4,4)
+      MoveScaled(19,0,4,4)
       Picture = Picture["icon:/16/clear"]
     }
     { SubScaleSlider Slider
-      MoveScaled(23,0,24,3)
+      MoveScaled(24,0,23,3)
       Tag = "sub_scale"
-      Expand = True
       Value = 10
     }
     { SubScaleSpinBox SpinBox
@@ -140,6 +162,8 @@
   { HBox3 HBox
     MoveScaled(1,24,60,4)
     Spacing = True
+    Margin = True
+    Padding = 2
     { PictureBox3 PictureBox
       MoveScaled(0,0,2.2857,2.2857)
       Picture = Picture["icon:/16/sort-descent"]
@@ -150,15 +174,18 @@
       AutoResize = True
       Text = ("* Subtitle position")
     }
+    { VBox5 VBox
+      MoveScaled(17,0,3,4)
+      Expand = True
+    }
     { ToolButton3 ToolButton Clears
       Name = "ToolButton3"
-      MoveScaled(18,-1,4,4)
+      MoveScaled(19,-1,4,4)
       Picture = Picture["icon:/16/clear"]
     }
     { SubPositionSlider Slider
-      MoveScaled(23,0,24,3)
+      MoveScaled(24,0,23,3)
       Tag = "sub_pos"
-      Expand = True
     }
     { SubPositionSpinBox SpinBox
       MoveScaled(48,0,10,4)
@@ -166,35 +193,40 @@
     }
   }
   { AlignmentHBox HBox
-    MoveScaled(1,29,60,4)
+    MoveScaled(1,29,60,4.1429)
     ToolTip = ("Mplayer option:\n-ass-force-style Alignment=<align>")
     Spacing = True
-    Padding = 8
+    Margin = True
+    Padding = 2
     { AlignmentCHK CheckBox
       MoveScaled(1,0,19,4)
       AutoResize = True
       Text = ("* Subtitle alignment")
     }
     { ComboAlignment ComboBox
-      MoveScaled(29,0,26,4)
+      MoveScaled(23,0,35,4)
       Expand = True
       ReadOnly = True
       List = [("0 - Top"), ("1 - Center"), ("2 - Bottom")]
       Text = ("0 - Top")
     }
   }
+  { Separator1 Separator
+    MoveScaled(12,33,40,2)
+  }
   { AlignmentHBox2 HBox
-    MoveScaled(0,33,61,4)
+    MoveScaled(1,35,61,4.1429)
     ToolTip = ("Mplayer option:\n-ass-force-style Alignment=<align>")
     Spacing = True
-    Padding = 8
+    Margin = True
+    Padding = 2
     { FrameDropCHK CheckBox
       MoveScaled(1,0,17,4)
       AutoResize = True
       Text = ("FrameDrop")
     }
     { FrameDropCombobox ComboBox
-      MoveScaled(29,0,26,4)
+      MoveScaled(24,0,35,4)
       Expand = True
       ReadOnly = True
       List = [("1 - Soft Framedropping"), ("2 - Hard Framedropping")]
