--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -516,130 +516,129 @@
     }
   }
   { MainToolBar Panel
-    MoveScaled(3,0,92,4)
+    MoveScaled(0,0,92,4)
     Arrangement = Arrange.Horizontal
-    Padding = 1
-    { ShowVolBtn2 ToolButton DynaGuiToolbar
+    { ShowVolBtn2 Button DynaGuiToolbar
       Name = "ShowVolBtn2"
       MoveScaled(1,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Open a file")
       AutoResize = True
       Picture = Picture["document-open.png"]
+      Border = False
     }
-    { OpenNetworkBTN ToolButton DynaGuiToolbar
+    { OpenNetworkBTN Button DynaGuiToolbar
       Name = "OpenNetworkBTN"
       MoveScaled(6,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Open an URI/Network stream")
       AutoResize = True
       Picture = Picture["icon:/22/network"]
+      Border = False
     }
-    { ConfigureChainsBTN ToolButton DynaGuiToolbar
+    { ConfigureChainsBTN Button DynaGuiToolbar
       Name = "ConfigureChainsBTN"
       MoveScaled(10,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Show/hide chains window")
       AutoResize = True
       Picture = Picture["pipe.png"]
+      Border = False
     }
-    { ConfigureBTN ToolButton DynaGuiToolbar
+    { ConfigureBTN Button DynaGuiToolbar
       Name = "ConfigureBTN"
       MoveScaled(15,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Configuration toolbox")
       AutoResize = True
       Picture = Picture["configure.png"]
+      Border = False
     }
-    { TagEditorBtn ToolButton DynaGuiToolbar
+    { TagEditorBtn Button DynaGuiToolbar
       Name = "TagEditorBtn"
       MoveScaled(19,0,4,4)
       Enabled = False
-      Font = Font["1"]
       ToolTip = ("Show/Hide AudioTag editor")
       AutoResize = True
       Picture = Picture["icon:/22/edit"]
+      Border = False
     }
     { FlexSpace PictureBox
       MoveScaled(33,0,9,4)
       Font = Font["1"]
       Expand = True
     }
-    { ShowAudioEq ToolButton DynaGuiToolbar
+    { ShowAudioEq Button DynaGuiToolbar
       Name = "ShowAudioEq"
       MoveScaled(54,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Video Equalizer")
       AutoResize = True
       Picture = Picture["audioequalizer.png"]
+      Border = False
     }
-    { ShowVideoEq ToolButton DynaGuiToolbar
+    { ShowVideoEq Button DynaGuiToolbar
       Name = "ShowVideoEq"
       MoveScaled(58,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Video Equalizer")
       AutoResize = True
       Picture = Picture["icon:/22/color"]
+      Border = False
     }
-    { SwitchSubBtn ToolButton DynaGuiToolbar
+    { SwitchSubBtn Button DynaGuiToolbar
       Name = "SwitchSubBtn"
       MoveScaled(62,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Switch subtitle track")
       AutoResize = True
       Picture = Picture["icon:/22/font"]
+      Border = False
     }
-    { SwitchAudioBTN ToolButton DynaGuiToolbar
+    { SwitchAudioBTN Button DynaGuiToolbar
       Name = "SwitchAudioBTN"
       MoveScaled(67,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Switch audio track")
       AutoResize = True
       Picture = Picture["icon:/22/language"]
+      Border = False
     }
-    { RealtimeBTN ToolButton DynaGuiToolbar
+    { RealtimeBTN Button DynaGuiToolbar
       Name = "RealtimeBTN"
       MoveScaled(72,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Other realtime commands")
       AutoResize = True
       Picture = Picture["icon:/22/clock"]
+      Border = False
     }
     { Separator2 Separator
       MoveScaled(76,0,2,4)
       Font = Font["1"]
     }
-    { SwitchSidePanelBTN ToolButton DynaGuiToolbar
+    { SwitchSidePanelBTN Button DynaGuiToolbar
       Name = "SwitchSidePanelBTN"
       MoveScaled(79,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Hide/show left panel")
       AutoResize = True
       Picture = Picture["view-choose.png"]
+      Border = False
     }
-    { FullScreenBtn ToolButton DynaGuiToolbar
+    { FullScreenBtn Button DynaGuiToolbar
       Name = "FullScreenBtn"
       MoveScaled(83,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Fullscreen Switch")
       AutoResize = True
       Picture = Picture["view-fullscreen.png"]
+      Border = False
     }
-    { PoweroffBTN ToolButton DynaGuiToolbar
+    { PoweroffBTN Button DynaGuiToolbar
       Name = "PoweroffBTN"
       MoveScaled(86,0,4,4)
-      Font = Font["1"]
       ToolTip = ("Shutdown menu")
       AutoResize = True
       Picture = Picture["icon:/22/quit"]
+      Border = False
     }
   }
   { HSplit1 HSplit
-    MoveScaled(0,4,103,68)
+    MoveScaled(1,8,103,68)
     Tracking = True
     Expand = True
     { LeftSidePanel Panel
-      MoveScaled(1,2,39,64)
+      MoveScaled(1,3,39,64)
       Expand = True
       Arrangement = Arrange.Vertical
       Spacing = True
