--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -987,13 +987,20 @@
         }
         { NoParse46 HBox
           MoveScaled(2,27,44,4)
-          ToolTip = ("Enable/Disbale Tooltips")
+          ToolTip = ("Enable this if you want xt7 to be controlled through an mpris2 compliant client.\n")
           Spacing = True
           { ToolTipsCHKDBUS CheckBox
-            MoveScaled(0,0,43,4)
+            MoveScaled(0,0,16,4)
             ToolTip = ("Makes xt7 register itself into dbus.\nThis will export media properties and gives basic options to control the player.")
-            Expand = True
+            AutoResize = True
             Text = ("Dbus support")
+          }
+          { Label22 Label
+            MoveScaled(19,0,11,3)
+            Font = Font["Italic"]
+            AutoResize = True
+            Text = ("   (MPRIS)")
+            Alignment = Align.Right
           }
         }
         { NoParse47 HBox
