Italian translation update and tooltip typo corrected

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1581,7 +1581,7 @@
             { PanScan ToolButton
               MoveScaled(36,0,5,4)
               Font = Font["6"]
-              ToolTip = ("Open a file...")
+              ToolTip = ("Zoom the video")
               Picture = Picture["icon:/medium/zoom-in"]
             }
           }
